# Projects

./: .gitignore  README.md  books.json  survey.json  surveys.json
Book_tracker/: book_tracking.py  pyproject.toml
Cli_Weather/: main.py  pyproject.toml
Survey_Builder/: cli.py  main.py  models.py  pyproject.toml  utils.py
TodoList/: app.py  main.py  pyproject.toml  todo_list.db  todo_manager.py
TodoList-app/: README.md
TodoListApp/: pyproject.toml
TodoListApp/tests/: test_todo_manager.py
TodoListApp/todolistapp/: main.py  models.py  todo_manager.py
book_tracker/: README.md  books.json  pyproject.toml
book_tracker/book_tracker/: book_tracking.py  books.json  model.py
cli-weather/: pyproject.toml
cli-weather/weather_tool/: config.py  main.py
survey_builder/: README.md  pyproject.toml
survey_builder/survey_builder/: cli.py  main.py  models.py
